vpc.tf
provider "aws" {
    access_key = "${var.aws_access_key}"
    secret_key = "${var.aws_secret_key}"
    region = "${var.region}"
}

resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc-cidr
  instance_tenancy     = "default"
  enable_dns_hostnames = true
  
    #create tags for cost evaluation purpose
  tags                 = { 
      name = "terraform"
      env  = "prod"
      
      }
}
